.stack-work/logs/unix-compat-0.4.3.1.log
Configuring unix-compat-0.4.3.1...
Building unix-compat-0.4.3.1...
Preprocessing library unix-compat-0.4.3.1...
[1 of 8] Compiling System.PosixCompat.User ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/User.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/User.o )
[2 of 8] Compiling System.PosixCompat.Unistd ( src/System/PosixCompat/Unistd.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Unistd.o )
[3 of 8] Compiling System.PosixCompat.Types ( src/System/PosixCompat/Types.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Types.o )
[4 of 8] Compiling System.PosixCompat.Time ( src/System/PosixCompat/Time.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Time.o )
[5 of 8] Compiling System.PosixCompat.Temp ( src/System/PosixCompat/Temp.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Temp.o )
[6 of 8] Compiling System.PosixCompat.Files ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Files.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Files.o )
[7 of 8] Compiling System.PosixCompat.Extensions ( .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Extensions.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat/Extensions.o )
[8 of 8] Compiling System.PosixCompat ( src/System/PosixCompat.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-1.24.2.0/build/System/PosixCompat.o )
cbits/HsUnixCompat.c: In function ‘unix_major’:

cbits/HsUnixCompat.c:9:12: error:
     warning: implicit declaration of function ‘major’; did you mean ‘unix_major’? [-Wimplicit-function-declaration]
         return major(dev);
                ^~~~~
                unix_major
cbits/HsUnixCompat.c: In function ‘unix_minor’:

cbits/HsUnixCompat.c:14:12: error:
     warning: implicit declaration of function ‘minor’; did you mean ‘unix_minor’? [-Wimplicit-function-declaration]
         return minor(dev);
                ^~~~~
                unix_minor
cbits/HsUnixCompat.c: In function ‘unix_makedev’:

cbits/HsUnixCompat.c:19:12: error:
     warning: implicit declaration of function ‘makedev’; did you mean ‘unix_makedev’? [-Wimplicit-function-declaration]
         return makedev(maj, min);
                ^~~~~~~
                unix_makedev
cbits/HsUnixCompat.c: In function ‘unix_major’:

cbits/HsUnixCompat.c:9:12: error:
     warning: implicit declaration of function ‘major’; did you mean ‘unix_major’? [-Wimplicit-function-declaration]
         return major(dev);
                ^~~~~
                unix_major
cbits/HsUnixCompat.c: In function ‘unix_minor’:

cbits/HsUnixCompat.c:14:12: error:
     warning: implicit declaration of function ‘minor’; did you mean ‘unix_minor’? [-Wimplicit-function-declaration]
         return minor(dev);
                ^~~~~
                unix_minor
cbits/HsUnixCompat.c: In function ‘unix_makedev’:

cbits/HsUnixCompat.c:19:12: error:
     warning: implicit declaration of function ‘makedev’; did you mean ‘unix_makedev’? [-Wimplicit-function-declaration]
         return makedev(maj, min);
                ^~~~~~~
                unix_makedev
Installing library in
/home/xnor/.stack/snapshots/x86_64-linux-tinfo6/lts-9.21/8.0.2/lib/x86_64-linux-ghc-8.0.2/unix-compat-0.4.3.1-Ausmw6d7KIwA7sl52mzqxC
Registering unix-compat-0.4.3.1...
